--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/nttlong/n-admin#readme",
   "dependencies": {
+    "html-pdf": "^2.2.0",
     "q-coll": "git+https://github.com/nttlong/n-queryable.git",
     "quicky": "git+https://github.com/nttlong/njs-q.git"
   }
